--- a/index.html
+++ b/index.html
@@ -79,9 +79,44 @@
     </section>
     <section id="sotd"></section>
     <section>
-      <h2>The Goal of Garuda</h2>
+      <h2>The Impossible, Inescapable Reform of Advertising</h2>
       <p>
-        The objective of this proposal is to <em>make a trustworthy advertising server
+        Digital advertising has rightly become despised through decades of mismanagement, but it
+        nevertheless is an essential utility. While other business models do exist and should
+        prosper, they are simply insufficient to make up for the loss that eradicating advertising
+        would cause. Our only option, then, is to fix it.
+      </p>
+      <p>
+        Most parties support reform, but it is proving politically difficult to achieve.
+        Advertising is a complex environment involving multiple stakeholders that run completely
+        different organisations yet the pieces they provide must all more or less fit together for
+        the system to function. The current system operates poorly — in some parts staggeringly so —
+        but it does operate. Changing the way in which some parts fit together requires different
+        stakeholders to agree to change in matching ways, and therein lies the rub.
+      </p>
+      <p>
+        Coordinate change is difficult at all times, but in digital advertising it is particularly
+        challenging because most of the parties actively distrust one another.
+      </p>
+      <p>
+        We therefore find ourselves presented with a choice: reform can either happen through
+        vertical integration which will favour the most integrated, or it can happen through
+        multistakeholder standards. The latter is preferable as it can bring forward a healthier
+        ecosystem in which more voices are represented, but it can only exist if we develop a
+        principled governance structure to foster trust between stakeholders.
+      </p>
+      <p>
+        This is where a trustworthy server becomes a particularly useful construct. Since it
+        <em>has</em> to be trusted by all stakeholders (no one would trust such a server operated by
+        just one type of party), it provides a common space for browsers (representing users),
+        publishers, and adtech intermediaries to meet, and where they can be put in a position of
+        <em>needing</em> to achieve consensus for the system to operate.
+      </p>
+    </section>
+    <section>
+      <h2>The Goal</h2>
+      <p>
+        The objective of Garuda is to <em>make a trustworthy advertising server
         possible.</em> The notion of a trustworthy advertising server is a potentially very
         powerful one in that it can enable a number of highly-desirable use cases in advertising
         technology, notably that of anonymising requests. However, trust does not appear as if by
@@ -89,7 +124,7 @@
       </p>
       <p>
         Several suggestions have been made in order to make this trust possible, but none of them
-        works just yet:
+        works today:
       </p>
       <ul>
         <li>
@@ -100,7 +135,7 @@
         </li>
         <li>
           <strong>Use some form of secure multiparty computation magic</strong>. Purely
-          mathematical solutions are great in that they are highly enforceable; however it is not
+          mathematical solutions are great in that they are highly enforceable; however it is not yet
           clear that this problem can be solved in full that way, straight from the browser.
         </li>
         <li>
@@ -113,18 +148,18 @@
           <strong>Rely on regulation or contracts</strong>. Our jobs as technologists would be a
           lot simpler if we could treat technology as neutral and offload figuring out the hard
           human parts to legislators. Unfortunately, that approach is not just not simple but
-          simplistic. It does not account for the cost of contractual enforcement (who finances the
-          audits, for instance) nor does it account for regulatory capture (which runs rampant in
-          privacy).
+          simplistic. The past two decades of digital advertising regulation have relied on
+          contractual obligations and user-hostile choice architectures, with effectively nothing to
+          show for it.
         </li>
         <li>
           <strong>Move everything into the browser</strong>. The browser is intended as a point of
           maximal trust for users, and to a large degree this trust is inescapable. Unfortunately,
           there is no longer consensus in the Web community that all major browsers are acting as
           trustworthy agents for the users and there is suspicion of self-dealing from some vendors,
-          particularly relating to advertising. While I wish nothing more than to see trust in
-          browsers rebuilt, this proposal endeavours to deal with the cards as have been given and
-          not those I might wish we had had instead.
+          particularly relating to advertising. Rebuilding trust in browsers is a highly desirable
+          outcome, but sits outside the scope that we tackle here. This proposal endeavours to deal
+          with the cards we have been given and not those I might wish we had had instead.
         </li>
       </ul>
       <p>
@@ -132,61 +167,51 @@
         downside, these are necessarily imperfect and they incur some overhead. On the upside, a
         group of people with effective checks and balances can handle complex and evolving
         situations better than anything else — and provide a strong foundation atop which to build
-        trust between parties that, historically and structurally, have not trusted one another
-        much.
+        trust between parties that, historically and structurally, do not trust one another much.
       </p>
-      <p>
-        The responsibilities of the Garuda group include:
-      </p>
-      <ul>
-        <li>Shepherding the technical standards that define the Garuda trustworthy server.</li>
-        <li>Managing the open source implementation and maintenance of the trustworthy server.</li>
-        <li>Operating the worldwide network of trustworthy servers and supporting their being
-          audited.</li>
-        <li>Ensuring the general health of the advertising ecosystem by providing a common space
-          where stakeholders must reach some form of consensus in order for the system to operate.
-        </li>
-      </ul>
     </section>
     <section>
-      <h2>The Impossible, Inescapable Reform of Advertising</h2>
+      <h2>Responsibilities</h2>
       <p>
-        Digital advertising is an essential utility. It has rightly become hated through decades of
-        mismanagement, but while other business models do exist and should prosper, they are simply
-        insufficient to make up for the loss that eradicating advertising would cause. Our only
-        option, then, is to fix it.
+        Garuda is an institutional arrangement composed of several constituencies and groups that
+        together form the <dfn data-lt="institution">Garuda institution</dfn>. The
+        [=Garuda institution=] has several responsibilities:
       </p>
-      <p>
-        While most parties support reform, it is proving politically difficult to achieve.
-        Advertising is a complex environment involving multiple stakeholders that run completely
-        different organisations and the pieces they provide must all more or less fit together for
-        the system to function. The current system operates poorly — in some parts staggeringly so —
-        but it does operate. Changing the way in which some parts fit together requires different
-        stakeholders to agree to change in matching ways, and therein lies the rub.
-      </p>
-      <p>
-        It is difficult to coordinate such a change because, for historical reason that we need not
-        discuss here, most of the parties actively distrust one another.
-      </p>
-      <p>
-        We therefore find ourselves presented with a choice: reform can either happen through
-        vertical integration which will favour the most intergrated, or it can happen through
-        multistakeholder standards. The latter is preferable since it is pro-competitive and can
-        bring forward a healthier ecosystem in which more voices are represented, but it can only
-        exist if we can develop a governance structure that will foster trust between stakeholders
-        by empowering their participation and granting them auditing rights and principles to serve
-        as checks and balances for the system.
-      </p>
-      <p>
-        This is where a trustworthy server becomes a particularly useful construct. Since it
-        <em>has</em> to be trusted by all stakeholders (no one would trust such a server operated by
-        just one type of party), it provides a common space for browsers (representing users),
-        publishers, and adtech intermediaries to meet, and where they can be put in a position of
-        <em>needing</em> to achieve consensus for the system to operate.
-      </p>
+      <dl>
+        <dt>Shepherding the technical standards that define the Garuda trustworthy server</dt>
+        <dd>
+          Garuda will need to cooperate with the <a href="https://w3.org/">W3C</a> and with
+          <a href="https://web-platform-tests.org/">WPT</a> in order to guarantee that the technical
+          standards that define how all parties integrate and interact with the trusted server are
+          interoperable, royalty-free, and in line with the ethical principles of the Web and the
+          Internet ([[?ETHICAL-WEB]], [[?RFC8890]]).
+        </dd>
+        <dt>Managing the open source implementation and maintenance of the trusted server</dt>
+        <dd>
+          The trusted server will be developed in an open source manner, but changes made to the code
+          will need to be aligned with the objectives of the [=institution=], which will need to be
+          reflected in the change review process. Further, there is no expectation that software
+          development will be entirely carried out by the community; rather the [=institution=]
+          should provision sufficient resources to underwrite the entirety of the server's
+          development.
+        </dd>
+        <dt>Operating the worldwide network of trustworthy servers</dt>
+        <dd>
+          The [=institution=] will operate a network of trustworthy servers with high-performance
+          SLAs and an arrangement that enables easy auditing. This is intended to be core
+          infrastructure for the entire Web, and requires a level of quality and scale to match.
+        </dd>
+        <dt>Ensuring the general health of the advertising ecosystem</dt>
+        <dd>
+          By providing a common space where stakeholders must reach some form of consensus in order
+          for the system to operate, the [=institution=] is taking on some responsibility for the
+          health of the broader digital advertising ecosystem.
+        </dd>
+      </dl>
     </section>
     <section>
       <h2>Governance for Advertising</h2>
+      <!-- XXX: this needs rewriting -->
       <p>
         The past two decades in digital advertising have largely been defined by the avoidance of
         governance, and I believe that we have reached a stage at which most actors would agree it
@@ -406,6 +431,10 @@
         Levin Kim, Crystal Lee, Sahar Massachi, Tom Zick as convenors of the <em>Ethical Tech</em>
         and <em>Big Tech Governance</em> groups, and the attendees of the session for a spirited and
         constructive discussion.
+      </p>
+      <p>
+        I am very grateful for my colleagues at <em>The New York Times</em> for supporting this work,
+        atypical as it may be.
       </p>
     </section>
   </body>
