--- a/index.html
+++ b/index.html
@@ -314,16 +314,16 @@
       </p>
     </section>
     <section>
-      <h2>Use Cases This Opens Up</h2>
-      <!-- XXX: frame this as now and potential future -->
+      <h2>Use Cases</h2>
       <p>
         The immediate focus is on getting enough of a PARAKEET-like structure off the ground, so
         that we can have an open source system and the server infrastructure to operate it in a
-        trustworthy fashion up and running. But longer-term, more can be done from this position
-        because the PARAKEET server creates a "place" of sort which can implement multiple adtech
-        functions in such a way that multiple stakeholders have to reach consensus as to how it
-        works. This can progressively build a way out of the current unilateral, conflict-driven
-        model that is causing so much strife across the ecosystem.
+        trustworthy fashion up and running. This should enable sufficient anonymisation in the ad
+        environment to make it safe for users, and enable novel publisher techniques. But longer-term,
+        more can be done from this position because the PARAKEET server creates a "place" of sort
+        which can broker multiple adtech functions in such a way that multiple stakeholders have to
+        reach consensus as to how it works. This can progressively build a way out of the current
+        unilateral, conflict-driven model that is causing so much strife across the ecosystem.
       </p>
       <p>
         Some problems that this could help address are listed below. Note that I am deliberately
@@ -333,14 +333,14 @@
       <ul>
         <li>
           <strong>Fraud</strong>: putting control over fraud prevention not just with
-          intermediaries would incentivise making it more effective. The trustworthy server has
+          intermediaries would incentivise making it more effective. The trusted server has
           access to detailed user information that can support fraud detection. How this would
           integrated safely with fraud detection vendors is an open question.
         </li>
         <li>
           <strong>Malvertising</strong>: users and publishers have strong incentives to prevent
           malvertising, but are not usually in a position to do much about it. This would also help
-          provide the line of defence that they expect. Detecting malvertising at the trustworthy
+          provide the line of defence that they expect. Detecting malvertising at the trusted server
           level will cause less revenue loss than when it happens on the publisher side. This should
           also make it easier to collaborate across servers to weed out dangerous creatives.
         </li>
@@ -378,7 +378,12 @@
       <p>
         These issues need to be addressed before this can move forward.
       </p>
-      <!-- XXX: the user issue is bigger -->
+      <section>
+        <h3>Users are not represented</h3>
+        <!-- XXX: the user issue is bigger -->
+        <p>
+        </p>
+      </section>
       <section>
         <h3>The buy side is not represented</h3>
         <p>
