--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="twitter:creator" content="@robinberjon">
     <meta name="twitter:title" property="og:title" content="Governance of Ad Requests by a Union of Diverse Actors (GARUDA)">
     <meta name="twitter:description" property="og:description" content="Governance for advertising on the Web">
-    <meta name="twitter:image" property="og:image" content="https://darobin.github.io/garuda/owl-pink.png">
+    <meta name="twitter:image" property="og:image" content="https://darobin.github.io/garuda/owl.png">
     <meta name="twitter:image:alt" content="Outline of an owl">
     <meta name="twitter:url" property="og:url" content="https://darobin.github.io/garuda/">
     <meta property="og:locale" content="en">
